Eclipse_e-puck2/Workspace/.metadata/.plugins/org.eclipse.cdt.ui/MyProject.build.log
15:52:54 **** Build of configuration Default for project MyProject ****
make all 
[1;34mCompiling main.c[0m
main.c: In function 'main':
main.c:41:6: warning: parameter names (without types) in function declaration
      void set_body_led(on);
      ^~~~
main.c:45:6: error: 'charstr' undeclared (first use in this function); did you mean 'confstr'?
      charstr[100];
../e-puck2_main-processor/ChibiOS//os/common/ports/ARMCMx/compilers/GCC/rules.mk:216: recipe for target 'build/obj/main.o' failed
      ^~~~~~~
      confstr
main.c:45:6: note: each undeclared identifier is reported only once for each function it appears in
main.c:47:27: error: 'str' undeclared (first use in this function); did you mean 'sbrk'?
      str_length = sprintf(str, "Hello World\n");
                           ^~~
                           sbrk
main.c:40:19: warning: unused variable 'off' [-Wunused-variable]
      unsigned int off = 0;
                   ^~~
main.c:39:19: warning: unused variable 'on' [-Wunused-variable]
      unsigned int on = 1;
                   ^~
make: *** [build/obj/main.o] Error 1

15:52:54 Build Finished (took 675ms)

